--- a/src/modules/dashboard/components/ActionsPage/TotalStakeWidget/TotalStakeWidget.css
+++ b/src/modules/dashboard/components/ActionsPage/TotalStakeWidget/TotalStakeWidget.css
@@ -44,7 +44,6 @@
 
 .tooltip {
   margin-left: 10px;
-  padding: 10px;
   width: 220px;
 }
 
