--- a/src/modules/dashboard/components/CoinMachine/RemainingDisplayWidgets/RemainingDisplayWidget.css
+++ b/src/modules/dashboard/components/CoinMachine/RemainingDisplayWidgets/RemainingDisplayWidget.css
@@ -68,7 +68,5 @@
 }
 
 .tooltip {
-  padding: 5px;
   width: 260px;
-  font-weight: var(--weight-bold);
 }
